WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
204284
[LFC] Pass in the content area to LayoutContext::layout
https://bugs.webkit.org/show_bug.cgi?id=204284
Summary
[LFC] Pass in the content area to LayoutContext::layout
alan
Reported
2019-11-17 07:10:37 PST
The content area for the root is always pre-computed.
Attachments
Patch
(7.04 KB, patch)
2019-11-17 07:15 PST
,
alan
koivisto
: review+
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-11-17 07:10:56 PST
<
rdar://problem/57262690
>
alan
Comment 2
2019-11-17 07:15:11 PST
Created
attachment 383720
[details]
Patch
WebKit Commit Bot
Comment 3
2019-11-17 12:01:45 PST
Comment on
attachment 383720
[details]
Patch Rejecting
attachment 383720
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-01', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 383720, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Logging in as
commit-queue@webkit.org
... Fetching:
https://bugs.webkit.org/attachment.cgi?id=383720&action=edit
Fetching:
https://bugs.webkit.org/show_bug.cgi?id=204284
&ctype=xml&excludefield=attachmentdata Processing 1 patch from 1 bug. Updating working directory Processing patch 383720 from
bug 204284
. Fetching:
https://bugs.webkit.org/attachment.cgi?id=383720
Failed to run "['git', 'svn', 'dcommit', '--rmdir']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Committing to
http://svn.webkit.org/repository/webkit/trunk
... M Source/WebCore/ChangeLog ERROR from SVN: Item is out of date: File '/trunk/Source/WebCore/ChangeLog' is out of date W: 36b857a99b0b3616bddb1130712b6f08086ea732 and refs/remotes/origin/master differ, using rebase: :040000 040000 dbeffd504d5ff0d22c92db500d7fc21315f4a996 98c2922e4554af7d03462f880f060cb2250e53e5 M Source Current branch master is up to date. ERROR: Not all changes have been committed into SVN, however the committed ones (if any) seem to be successfully integrated into the working tree. Please see the above messages for details. Failed to run "['git', 'svn', 'dcommit', '--rmdir']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Committing to
http://svn.webkit.org/repository/webkit/trunk
... M Source/WebCore/ChangeLog ERROR from SVN: Item is out of date: File '/trunk/Source/WebCore/ChangeLog' is out of date W: 36b857a99b0b3616bddb1130712b6f08086ea732 and refs/remotes/origin/master differ, using rebase: :040000 040000 dbeffd504d5ff0d22c92db500d7fc21315f4a996 98c2922e4554af7d03462f880f060cb2250e53e5 M Source Current branch master is up to date. ERROR: Not all changes have been committed into SVN, however the committed ones (if any) seem to be successfully integrated into the working tree. Please see the above messages for details. Failed to run "['git', 'svn', 'dcommit', '--rmdir']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Updating OpenSource Current branch master is up to date. Full output:
https://webkit-queues.webkit.org/results/13262884
alan
Comment 4
2019-11-17 13:02:55 PST
Committed
r252533
: <
https://trac.webkit.org/changeset/252533
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug