[LFC] Pass in the content area to LayoutContext::layout https://bugs.webkit.org/show_bug.cgi?id=204284 <rdar://problem/57262690>

Reviewed by Antti Koivisto.

Note that we never layout the root box. It has to have an already computed geometry (in case of ICB, it's the view geometry).

* layout/LayoutContext.cpp:
(WebCore::Layout::LayoutContext::layout):
(WebCore::Layout::LayoutContext::runLayout):
(WebCore::Layout::LayoutContext::runLayoutAndVerify):
* layout/LayoutContext.h:
* layout/layouttree/LayoutTreeBuilder.cpp:
(WebCore::Layout::printLayoutTreeForLiveDocuments):
* page/FrameViewLayoutContext.cpp:
(WebCore::FrameViewLayoutContext::layoutUsingFormattingContext):

Canonical link: https://commits.webkit.org/217568@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252533 268f45cc-cd09-0410-ab3c-d52691b4dbfc